--- a/index.html
+++ b/index.html
@@ -1,17 +1,84 @@
 <!DOCTYPE html>
 <html lang="fr">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Projet</title>
-    <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <header></header>
-    <main></main>
-    <footer></footer>
-</body>
-<script src="app.js"></script>
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Projet</title>
+        <!-- <link rel="stylesheet" href="reset.css" /> -->
+        <link rel="stylesheet" href="style.css" />
+    </head>
+    <body>
+        <header>
+            <nav>
+                <div class="logo__container">
+                    <img src="./assets/logo.jpg" alt="" />
+                </div>
+                <div class="nav__elements__container">
+                    <ul class="nav__elements">
+                        <li class="nav__element"><a href="">courses</a></li>
+                        <li class="nav__element"><a href="">Why us</a></li>
+                        <li class="nav__element"><a href="">Support</a></li>
+                        <li class="nav__element">
+                            <a class="link" href="#">get started</a>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
+        </header>
+        <main>
+            <div class="side__container">
+                <div class="left">
+                    <h1>
+                        learn <br />
+                        japanese
+                    </h1>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        Pariatur quas, doloribus delectus at officia iusto,
+                        omnis perspiciatis quidem praesentium neque repellat
+                        deserunt, saepe temporibus dolores quis corrupti libero
+                        numquam sunt?
+                    </p>
+                    <a class="link blue" href="#">get started</a>
+                </div>
+            </div>
+            <div class="picto__container">
+                <div class="picto">
+                    <img src="./assets/book.png" alt="" />
+                    <p>
+                        <span>detailed lessons</span>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        Accusantium consequuntur quis voluptatum iste voluptatem
+                        impedit quia ea! Quae qui maiores, provident id ipsum
+                        nobis tempore aspernatur consequuntur, a quam cumque.
+                    </p>
+                </div>
+                <div class="picto">
+                    <img src="assets/headset.png" alt="" />
+                    <p>
+                        <span>engaging audio</span>
+                        Lorem ipsum dolor sit amet consectetur, adipisicing
+                        elit. Laudantium ratione facilis rem quasi, libero
+                        laborum assumenda dolorum odit mollitia sapiente
+                        obcaecati sed ut quos aut praesentium in ducimus tempora
+                        nam!
+                    </p>
+                </div>
+                <div class="picto">
+                    <img src="assets/loop.png" alt="" />
+                    <p>
+                        <span>flexible subscription</span>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        Corrupti nostrum minus consequuntur est laboriosam dolor
+                        fuga fugiat. Maiores facilis veritatis, magni quia
+                        consequatur, ad, praesentium voluptatum dicta vitae
+                        laboriosam voluptate?
+                    </p>
+                </div>
+            </div>
+        </main>
+        <footer></footer>
+    </body>
+    <script src="app.js"></script>
 </html>
